browser update 4 for aurora 35

--- a/fy-NL/browser/chrome/browser/browser.properties
+++ b/fy-NL/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=‘%S’ sjen litte
 badContentBlocked.blocked.message=%S blokkearret ynhâld op dizze side.
 badContentBlocked.notblocked.message=%S blokkearret gjin ynhâld op dizze side.
 
-# missing plugin installer
-installPlugin.message = Wolle jo de ynstekker om de media op dizze side wer te jaan ynstallearje?
-installPlugin.button.label=%S ynstallearje
-installPlugin.button.accesskey=y
-installPlugin.ignoreButton.label=Net mear freegje.
-installPlugin.ignoreButton.accesskey=N
-
 crashedpluginsMessage.title=De %S ynstekker is ferûngelokke.
 crashedpluginsMessage.reloadButton.label=Side op 'e nij lade
 crashedpluginsMessage.reloadButton.accesskey=S
@@ -569,6 +562,9 @@ getUserMedia.sharingMenu.accesskey = d
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +578,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera en mikrofoan)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofoan en applikaasje)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofoan en skerm)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofoan en finster)
+getUserMedia.sharingMenuCameraApplication = %S (kamera en applikaasje)
+getUserMedia.sharingMenuCameraScreen = %S (kamera en skerm)
+getUserMedia.sharingMenuCameraWindow = %S (kamera en finster)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofoan en applikaasje)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofoan en skerm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofoan en finster)
@@ -602,3 +601,12 @@ slowStartup.disableNotificationButton.accesskey = D
 customizeTips.tip0 = %1$S: jo kinne %2$S sa oanpasse dat it krekt sa wurket as jo. Sleepje ienfâdich in boppensteand item nei it menu of de arkbalke. %3$S oer it oanpassen fan %2$S.
 customizeTips.tip0.hint = Hint
 customizeTips.tip0.learnMore = Lês mear
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Werstart %S om fernijingen ta te passen
+appmenu.updateFailed.description = Achtergrûnfernijing mislearre, download de fernijing
+appmenu.restartBrowserButton.label = %S werstarte
+appmenu.downloadUpdateButton.label = Fernijing downloade
