--- a/fy-NL/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fy-NL/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,8 +99,19 @@ quit-button.tooltiptext.linux2 = %1$S ôfslute (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S ôfslute (%2$S)
 
+loop-call-button2.label = In petear starte
+loop-call-button2.tooltiptext = In petear starte
+
+social-share-button.label = Dizze side diele
+social-share-button.tooltiptext = Dizze side diele
+
 panic-button.label = Ferjit
 panic-button.tooltiptext = Ferjit oer resinte browseskiednis
 
-loop-call-button.label = Noegje earne út om te praten
-loop-call-button.tooltiptext = Noegje earne út om te praten
+web-apps-button.label = Apps
+web-apps-button.tooltiptext = Apps ûntdekke
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = WebIDE iepenje
