--- a/fy-NL/browser/chrome/browser/downloads/downloads.properties
+++ b/fy-NL/browser/chrome/browser/downloads/downloads.properties
@@ -38,6 +38,33 @@ stateBlockedPolicy=Blokkearre troch jo befeiligingssoanes
 # Indicates that the download was blocked after scanning.
 stateDirty=Blokkearre: kin in firus of spyware befetsje
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Dit bestân befettet in firus of malware.
+blockedPotentiallyUnwanted=Dit bestân kin jo kompjûter skansearje.
+blockedUncommon=Dit bestân kin net feilich wêze om te iepenjen.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Binne jo wis dat jo dit bestân deblokkearje wolle?
+unblockTypeMalware=Dit bestân befettet in firus of oare malware dy't jo kompjûter skansearje sil.
+unblockTypePotentiallyUnwanted=Dit bestân, ferburgen as in helpsume download, sil ûnferwachte wizigingen meitsje oan jo programma's en ynstellingen.
+unblockTypeUncommon=Dit bestân is downloaden fan in unbekende en potinsjeel gefaarlike website en kin net feilich wêze om te iepenjen.
+unblockTip=Jo kinne sykje foar in alternative downloadboarne of probearje om it bestân letter nochris te downloaden.
+unblockButtonContinue=Dochs deblokkearje
+unblockButtonCancel=Hâld my feilich
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
