--- a/fy-NL/browser/chrome/browser/places/places.properties
+++ b/fy-NL/browser/chrome/browser/places/places.properties
@@ -80,16 +80,16 @@ OrganizerQueryDownloads=Downloads
 OrganizerQueryAllBookmarks=Alle blêdwizers
 OrganizerQueryTags=Labels
 
-# LOCALIZATION NOTE (tagResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "tag"
-# See createResultLabel() in urlbarBindings.xml 
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Label
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "bookmark"
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Blêdwizer
+switchtabResultLabel=Ljepblêd
+keywordResultLabel=Kaaiwurd
+searchengineResultLabel=Sykje
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
