--- a/fy-NL/browser/chrome/browser/loop/loop.properties
+++ b/fy-NL/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Meidwaan mei petear
+first_time_experience_button_label=Starte
+
 share_link_header_text=Diel dizze keppeling om in oar út te noegjen om te praten:
+invite_header_text=Ien útnoegje foar in petear mei jo.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -85,6 +95,10 @@ new_contact_button=Nij kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Namme
 new_contact_email_placeholder=E-mail
+new_contact_phone_placeholder=Firefox OS telefoan
+
+contacts_blocked_contacts=Blokkearre kontakten
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -243,7 +257,6 @@ legal_text_and_links3=Troch {{clientShortname}} te brûken gean jo akkoard mei d
   en it {{privacy_notice}}.
 legal_text_tos = brûkersbetingsten
 legal_text_privacy = privacybelied
-client_shortname_fallback=dit produkt
 
 feedback_call_experience_heading2=Hoe wie jo petear?
 feedback_what_makes_you_sad=Wat makket jo tryst?
@@ -268,3 +281,30 @@ feedback_rejoin_button=Opnij ferbine
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Rapportearje brûker
+
+help_label=Help
+tour_label=Toer
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Petear {{conversationLabel}}
+rooms_leave_button_label=Ferlitte
+rooms_list_copy_url_tooltip=Keppeling kopiearje
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Aktuele petear;Aktuele petearen
+rooms_list_delete_tooltip=Petear fuortsmite
+rooms_list_deleteConfirmation_label=Binne jo wis?
+rooms_list_no_current_conversations=Gjin aktuele petearen
+rooms_name_this_room_label=Dit petear in namme jaan
+rooms_new_room_button_label=In petear starte
+rooms_only_occupant_label=Jo bin hjir de earste.
+rooms_panel_title=Kies in petear of start in nije
+rooms_room_full_label=Der binne al twa minsken yn dit petear.
+rooms_room_full_call_to_action_nonFx_label=Download {{brandShortname}} om jo eigen te starten
+rooms_room_full_call_to_action_label=Lês mear oer {{clientShortname}} »
+rooms_room_joined_label=In oar is by it petear kommen!
+rooms_room_join_label=Doch mei oan dit petear
