--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Shfaq '%S'
 badContentBlocked.blocked.message=%S-i po bllokon lëndë në këtë faqe.
 badContentBlocked.notblocked.message=%S-i nuk po bllokon ndonjë lëndë në këtë faqe.
 
-# missing plugin installer
-installPlugin.message = Do të donit të instalohet shtojca e domosdoshme për shfaqjen e medias në këtë faqe?
-installPlugin.button.label=Instaloje %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Mos më pyet sërish
-installPlugin.ignoreButton.accesskey=M
-
 crashedpluginsMessage.title=Shtojca %S u vithis.
 crashedpluginsMessage.reloadButton.label=Ringarkoje faqen
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -574,13 +567,18 @@ getUserMedia.stopSharing.accesskey = N
 
 # getUserMedia.sharingMenu.label = Skeda që ndajnë pajisje
 getUserMedia.sharingMenu.accesskey = P
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -594,12 +592,16 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe zbatim)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
+getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe zbatim)
+getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
+getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe zbatim)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dhe ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dhe dritare)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Origjinë e panjohur
+
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S-i duket se po vonon… të… niset.
@@ -614,3 +616,12 @@ slowStartup.disableNotificationButton.accesskey = o
 customizeTips.tip0 = %1$S: %2$S-in mund ta përshtatni të punojë sipas mënyrës që doni. Thjesht tërhiqni këdo nga sa më sipër te menuja ose paneli. %3$S rreth personalizimit të %2$S-it.
 customizeTips.tip0.hint = Ndihmëz
 customizeTips.tip0.learnMore = Mësoni më tepër
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Riniseni %S-in që të zbatohen përditësimet
+appmenu.updateFailed.description = Përditësimi në prapaskenë dështoi, ju lutemi, shkarkoni përditësimin
+appmenu.restartBrowserButton.label = Rinisni %S-in
+appmenu.downloadUpdateButton.label = Download Update
