--- a/sq/toolkit/chrome/global/resetProfile.properties
+++ b/sq/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Duket sikur u bënë kohë që nuk e keni nisur %S-in. Doni ta pastroni, për një fillim të freskët, thuajse nga e para? Dhe, meqë jemi, mirë se u kthyet!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Rifreskojeni %S-in…
-resetProfile.resetButton.accesskey=R
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Rifreskojeni %S-in…
+refreshProfile.resetButton.accesskey=R
