browser update 5 for aurora 35

--- a/fy-NL/browser/chrome/browser/loop/loop.properties
+++ b/fy-NL/browser/chrome/browser/loop/loop.properties
@@ -62,12 +62,13 @@ problem_accessing_account=Der wie in probleem mei tagong ta jo account
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Opnij probearje
 
-share_email_subject3=Jo binne útnoege foar in petear
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} — Doch mei oan in petear
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Om dizze útnoeging te akseptearjen, kopiearje of klik dizze keppeling om jo petear te starten:\r\n\r\n{{callUrl}}
+share_email_body4=Hallo!\r\n\r\nDoch mei oan in fideopetear mei gebrûk fan {{clientShortname}}:\r\n\r\nJo hoege neat te downloaden of te ynstallearjen. Kopiearje en plak gewoanwei dizze URL yn jo browser:\r\n\r\n{{callUrl}}\r\n\r\nAs jo wolle kinne jo mear oer {{clientShortname}} lêze op {{learnMoreUrl}}\r\n\r\nOant letter!
 share_button=E-mail
 copy_url_button=Kopiearje
+copy_url_button2=Keppeling kopiearje
 copied_url_button=Kopiearre!
 
 panel_footer_signin_or_signup_link=Loch yn of meld jo oan
@@ -188,6 +189,7 @@ initiate_call_button_label2=Ree om jo petear te starten?
 incoming_call_title2=Petearfersyk
 incoming_call_accept_button=Akseptearje
 incoming_call_accept_audio_only_tooltip=Akseptearje mei audio
+incoming_call_accept_audio_video_tooltip=Akseptearje mei fideo
 incoming_call_cancel_button=Annulearje
 incoming_call_cancel_and_block_button=Annulearje en blokkearje
 incoming_call_block_button=Blokkearje
@@ -257,6 +259,12 @@ legal_text_and_links3=Troch {{clientShortname}} te brûken gean jo akkoard mei d
   en it {{privacy_notice}}.
 legal_text_tos = brûkersbetingsten
 legal_text_privacy = privacybelied
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=Oandreun troch
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Hoe wie jo petear?
 feedback_what_makes_you_sad=Wat makket jo tryst?
