browser update 6 for aurora 35

--- a/fy-NL/browser/chrome/browser/loop/loop.properties
+++ b/fy-NL/browser/chrome/browser/loop/loop.properties
@@ -66,7 +66,7 @@ share_email_subject4={{clientShortname}} — Doch mei oan in petear
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Hallo!\r\n\r\nDoch mei oan in fideopetear mei gebrûk fan {{clientShortname}}:\r\n\r\nJo hoege neat te downloaden of te ynstallearjen. Kopiearje en plak gewoanwei dizze URL yn jo browser:\r\n\r\n{{callUrl}}\r\n\r\nAs jo wolle kinne jo mear oer {{clientShortname}} lêze op {{learnMoreUrl}}\r\n\r\nOant letter!
-share_button=E-mail
+share_button2=Keppeling e-maile
 copy_url_button=Kopiearje
 copy_url_button2=Keppeling kopiearje
 copied_url_button=Kopiearre!
