updated latvian translation

--- a/lv/browser/chrome/browser/browser.properties
+++ b/lv/browser/chrome/browser/browser.properties
@@ -59,6 +59,10 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 logu);#1 (#2 logs);#1 (#2 
 getUserMedia.sharingApplication.message = Šobrīd jūs koplietojat lietotni ar šo lapu.
 getUserMedia.sharingMenu.label = Cilnes koplietojošās ierīces
 getUserMedia.sharingMenu.accesskey = k
+getUserMedia.sharingMenuCameraApplication = %S (kamera un lietotnes)
+getUserMedia.sharingMenuCameraScreen = %S (kamera un ekrāns)
+getUserMedia.sharingMenuCameraWindow = %S (kamera un logs)
+
 
 getUserMedia.sharingMenuCamera = %S (kamera)
 getUserMedia.sharingMenuMicrophone = %S (mikrofons)
@@ -441,12 +445,6 @@ webNotifications.neverShow=Nerādīt nekad
 webNotifications.neverShow.accesskey=N
 webNotifications.showFromSite=Vai vēlaties rādīt paziņojumus no %S?
 
-installPlugin.message = Vai vēlaties instalēt spraudni, kas nepieciešams satura attēlošanai šajā lapā?
-installPlugin.button.label=Instalēt %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Turpmāk nejautāt šo
-installPlugin.ignoreButton.accesskey=N
-
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S darbojas pilnekrāna režīma.
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
@@ -545,4 +543,8 @@ slowStartup.helpButton.accesskey = U
 slowStartup.disableNotificationButton.label = Turpmāk šo vairs nerādīt
 slowStartup.disableNotificationButton.accesskey = A
 
+appmenu.restartNeeded.description = Pārstartēt %S, lai atjauninātu
+appmenu.updateFailed.description = Fona atjauninājums neizdevās, lūdzu lejupielādējiet atjauninājumu
+appmenu.restartBrowserButton.label = Pārstartēt %S
+appmenu.downloadUpdateButton.label = Lejupielādēt atjauninājumu
 
