--- a/fr/browser/installer/nsisstrings.properties
+++ b/fr/browser/installer/nsisstrings.properties
@@ -23,7 +23,7 @@ WIN_CAPTION=Installation de $BrandShortName
 INTRO_BLURB1=Merci d'avoir choisi $BrandFullName, le navigateur qui place l'utilisateur au premier plan.
 INSTALL_BLURB1=Vous allez apprécier les dernières nouveautés en matière de rapidité, flexibilité et sécurité pour que vous gardiez le contrôle.
 INSTALL_BLURB2=$BrandShortName est réalisé par une organisation à but non lucratif dont l'objectif est de rendre le Web meilleur.
-INSTALL_BLURB3=Vous rejoignez également une communauté mondiale d'utilisateurs, contributeurs et développeurs qui se sont fixés pour objectif de réaliser le meilleur navigateur au monde.
+INSTALL_BLURB3=Vous rejoignez également une communauté mondiale d'utilisateurs, contributeurs et développeurs qui se sont fixé pour objectif de réaliser le meilleur navigateur au monde.
 
 WARN_MIN_SUPPORTED_OS_MSG=Nous sommes désolés, mais $BrandShortName ne peut pas être installé. Cette version de $BrandShortName nécessite ${MinSupportedVer} ou plus récent.
 WARN_WRITE_ACCESS=Vous n'avez pas de permission d'écriture sur le répertoire d'installation.\n\nCliquez sur « OK » pour sélectionner un répertoire différent.
