--- a/es-CL/toolkit/chrome/global/aboutTelemetry.properties
+++ b/es-CL/toolkit/chrome/global/aboutTelemetry.properties
@@ -3,6 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 pageSubtitle = Esta página muestra la información sobre el rendimiento, hardware, uso y personalizaciones recolectada por Telemetry. La información es enviada a %1$S para ayudar a mejorar %2$S.
+generalDataHeadingName = Nombre
+generalDataHeadingValue = Valor
 slowSqlMain = Sentencias SQL lentas en el hilo principal
 slowSqlOther = Sentencias SQL lentas en los hilos auxiliares
 slowSqlHits = Aciertos
