--- a/es-CL/browser/chrome/browser/devtools/timeline.properties
+++ b/es-CL/browser/chrome/browser/devtools/timeline.properties
@@ -39,3 +39,5 @@ timeline.label.styles=Estilos
 timeline.label.reflow=Reflujo
 timeline.label.paint=Dibujo
 timeline.label.domevent=Evento DOM
+timeline.label.consoleTime=Consola
+timeline.markerDetailFormat=%1$S (%2$S)
