--- a/es-CL/security/manager/chrome/pippki/pippki.properties
+++ b/es-CL/security/manager/chrome/pippki/pippki.properties
@@ -73,14 +73,10 @@ pageInfo_NoEncryption=Conexión sin cifrar
 pageInfo_Privacy_None1=El sitio web %S no admite cifrado para la página que está viendo.
 pageInfo_Privacy_None2=La información enviada por Internet sin cifrar puede ser vista por otras personas. 
 pageInfo_Privacy_None3=La página que está viendo está sin cifrar.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Conexión cifrada: Cifrado fuerte (%S, clave de %S bits)
+pageInfo_StrongEncryptionWithBitsAndProtocol=Conexión cifrada: Cifrado fuerte (%1$S, clave de %2$S bits, %3$S)
 pageInfo_Privacy_Strong1=La página que está viendo fue cifrada antes de ser transmitida por Internet.
 pageInfo_Privacy_Strong2=El cifrado hace muy difícil que gente no autorizada pueda ver la información que viaja entre dos ordenadores.  Por tanto, es muy improbable que alguien haya leído esta página mientras viajaba por la red.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Conexión cifrada: Cifrado débil (%S, clave de %S bits)
+pageInfo_WeakEncryptionWithBitsAndProtocol=Conexión cifrada: Cifrado débil (%1$S, clave de %2$S bits, %3$S)
 pageInfo_Privacy_Weak1=El sitio web %S está utilizando cifrado de bajo nivel para la página que está viendo.
 pageInfo_Privacy_Weak2=El cifrado de bajo nivel puede permitir a personas no autorizadas ver esta información.
 pageInfo_MixedContent=Conexión parcialmente cifrada
