[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/devtools/timeline.properties
+++ b/es-MX/browser/chrome/browser/devtools/timeline.properties
@@ -29,7 +29,11 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=RECORDS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Estilos
+timeline.label.reflow=Redibujado
+timeline.label.paint=Dibujar
+timeline.label.domevent=Evento DOM
