--- a/es-MX/browser/chrome/browser/devtools/webide.properties
+++ b/es-MX/browser/chrome/browser/devtools/webide.properties
@@ -19,6 +19,7 @@ importPackagedApp_title=Seleccionar directorio
 importHostedApp_title=Abrir aplicación alojada
 importHostedApp_header=Introduce la URL del archivo manifest
 
+notification_showTroubleShooting_label=Resolución de problemas
 notification_showTroubleShooting_accesskey=t
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
