--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -9,8 +9,10 @@
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_button_label=Primeros pasos
 
 share_link_header_text=Compartir este enlace para invitar a alguien a hablar:
+invite_header_text=Invita a alguien a unirse contigo.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -58,10 +60,14 @@ problem_accessing_account=Hubo un problema accesando a tu cuenta
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Reintentar
 
+share_email_subject4={{clientShortname}} — Unirse a la conversación
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body4=¡Hola! \n\nÚnete a mi para usar una conversación en video {{clientShortname}}: \n\nNo tienes que descargar o instalar nada. Sólo copia y pega este URL en tu navegador: \n\n{{callUrl}} \n\nSi quieres, puedes tambien aprender más acerca de {{clientShortname}} en {{learnMoreUrl}} \n\n¡Hablaré contigo pronto!
 share_button=Correo electrónico
+share_button2=Enviar enlace
 copy_url_button=Copiar
+copy_url_button2=Copiar enlace
 copied_url_button=¡Se copío!
 
 panel_footer_signin_or_signup_link=Ingresar o Registarse
@@ -89,7 +95,9 @@ new_contact_button=Nuevo contacto
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nombre
 new_contact_email_placeholder=Correo electrónico
+new_contact_phone_placeholder=Teléfono Firefox OS
 
+contacts_blocked_contacts=Contactos bloqueados
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
@@ -180,6 +188,7 @@ initiate_call_button_label2=¿Estás listo para iniciar tu conversación?
 incoming_call_title2=Solicitud de conversación
 incoming_call_accept_button=Aceptar
 incoming_call_accept_audio_only_tooltip=Aceptar con voz
+incoming_call_accept_audio_video_tooltip=Aceptar con video
 incoming_call_cancel_button=Cancelar
 incoming_call_cancel_and_block_button=Cancelar y bloquear
 incoming_call_block_button=Bloquear
@@ -234,6 +243,7 @@ call_timeout_notification_text=Tu llamada no obtuvo respuesta.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Internar de nuevo
+email_link_button=Enviar enlace
 cancel_button=Cancelar
 
 cannot_start_call_session_not_ready=No se puede iniciar la llamada, la sesión no está lista.
@@ -288,3 +298,10 @@ rooms_leave_button_label=Salir
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
 rooms_list_deleteConfirmation_label=¿Estás seguro?
+rooms_only_occupant_label=Eres el primero aquí.
+rooms_panel_title=Elije una conversación o inicia una nueva
+rooms_room_full_label=Ya hay dos personas en esta conversación
+rooms_room_full_call_to_action_nonFx_label=Descarga {{brandShortname}} para iniciar la tuya propia
+rooms_room_full_call_to_action_label=Saber más acerca de {{clientShortname}} »
+rooms_room_joined_label=¡Alguien se ha unido a la conversación!
+rooms_room_join_label=Unirse a la conversación
