--- a/es-MX/toolkit/chrome/global/resetProfile.properties
+++ b/es-MX/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Parece que no has iniciado %S en un tiempo. ¿Quieres limpiarlo para una nueva experiencia? Y a propósito, ¡bienvenido de nuevo!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Reiniciar %S…
+refreshProfile.resetButton.accesskey=e
