--- a/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -107,6 +107,9 @@ panic-button.label = Olvidar
 panic-button.tooltiptext = Olvidar el historial de navegación
 
 web-apps-button.label = Aplicaciones
+web-apps-button.tooltiptext = Descubrir aplicaciones
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Abrir WebIDE
