--- a/es-MX/browser/chrome/browser/downloads/downloads.properties
+++ b/es-MX/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,8 @@ stateDirty=Bloqueado: Podría contener virus o spyware
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Este archivo contiene un virus o un malware.
+blockedPotentiallyUnwanted=Este archivo puede dañar tu computadora.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
