--- a/es-MX/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-MX/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,13 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL recibió datos no válidos de la extens
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Característica SSL no compatible con las conexiones SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Característica SSL no admitida en los servidores.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Característica SSL no admitida en los clientes.
+SSL_ERROR_INVALID_VERSION_RANGE=El intervalo de versiones SSL no es válido.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=El interlocutor SSL ha seleccionado una suite de cifrado no permitida en la versión de protocolo elegida.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL ha recibido un mensaje de negociación Hello Verify Request mal formado.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL ha recibido un mensaje de negociación Hello Verify Request inesperado.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Característica SSL no admitida en esa versión del protocolo.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL ha recibido un mensaje de negociación Certificate Status inesperado.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algoritmo resumen no admitido utilizado por el interlocutor TLS.
 SEC_ERROR_IO=Ha ocurrido un error de E/S durante la autorización de seguridad.
 SEC_ERROR_LIBRARY_FAILURE=fallo de la biblioteca de seguridad.
 SEC_ERROR_BAD_DATA=biblioteca de seguridad: se han recibido datos incorrectos.
