--- a/es-MX/toolkit/chrome/global/charsetMenu.properties
+++ b/es-MX/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       I
 ISO-8859-2       = Centroeuropeo (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = Chino, simplificado
 
 # Chinese, Traditional
