[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/devtools/scratchpad.properties
+++ b/fa/browser/chrome/browser/devtools/scratchpad.properties
@@ -48,12 +48,14 @@ saveFile.failed=ذخیره‌سازی فایل ناموفق بود.
 
 # LOCALIZATION NOTE  (confirmClose.title): This is title of the prompt dialog when
 # you try to close a scratchpad with unsaved changes.
+confirmClose.title=تغییرات ذخیره نشده
 
 # LOCALIZATION NOTE  (confirmRevert): This is message in the prompt dialog when
 # you try to revert unsaved content of scratchpad.
 
 # LOCALIZATION NOTE  (confirmRevert.title): This is title of the prompt dialog when
 # you try to revert unsaved content of scratchpad.
+confirmRevert.title=بازگشت دادن تغییرات
 
 # LOCALIZATION NOTE  (scratchpadIntro): This is a multi-line comment explaining
 # how to use the Scratchpad. Note that this should be a valid JavaScript
@@ -76,6 +78,7 @@ scratchpad.statusBarLineCol  = سطر %1$S، ستون %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
+fileNoLongerExists.notification=این پرونده دیگر وجود ندارد.
 
 # LOCALIZATION NOTE (propertiesFilterPlaceholder): this is the text that
 # appears in the filter text box for the properties view container.
