--- a/fa/browser/chrome/browser/devtools/styleeditor.properties
+++ b/fa/browser/chrome/browser/devtools/styleeditor.properties
@@ -29,6 +29,7 @@
 # example: 111 rules.
 
 # LOCALIZATION NOTE  (error-load): This is shown when loading fails.
+error-load=برگ شیوه قادر به بارگذاری نمی‌باشد.
 
 # LOCALIZATION NOTE  (error-save): This is shown when saving fails.
 error-save=برگ شیوه قادر به ذخیره شدن نیست.
