--- a/fa/browser/chrome/browser/loop/loop.properties
+++ b/fa/browser/chrome/browser/loop/loop.properties
@@ -138,6 +138,7 @@ hangup_button_caption2=خروج
 
 # Outgoing conversation
 
+initiate_audio_video_call_button2=آغاز
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
