--- a/fa/browser/installer/nsisstrings.properties
+++ b/fa/browser/installer/nsisstrings.properties
@@ -20,6 +20,7 @@
 
 WIN_CAPTION=نصب $BrandFullName
 
+INTRO_BLURB1=از انتخاب $BrandFullName ممنونیم، مرورگری که شما را در اولویت قرار میدهد.
 INSTALL_BLURB1=شما از بالاترین سرعت، انعطاف و امنیت لذت خواهید برد که همیشه در دسترس شماست!
 INSTALL_BLURB2=به دلیل اینکه $BrandShortName به صورت غیر انتفاعی ساخته شده تا مرور در وب را برای شما بهتر کند.
 INSTALL_BLURB3=همینطور شما وارد جامعه ای از کاربران، همکاران و توسعه دهندگان خواهید شد که برای ساختن بهترین مرورگر دنیا تلاش میکنند.
@@ -46,11 +47,13 @@ ADD_CheckboxShortcutOnDesktop=در &رومیزی من
 SPACE_REQUIRED=فضای خالی (Space) مورد نیاز است:
 SPACE_AVAILABLE=فضای موجود:\u0020
 ONE_MOMENT_INSTALL=یک لحظه، $BrandShortName به هنگام تمام شدن نصب، شروع به کار میکند.
+ONE_MOMENT_UPGRADE=لطفا چند لحظه صبر کنید، $BrandShortName به هنگام اتمام نصب، شروع به کار میکند.
 INSTALL_MAINT_SERVICE=نصب سرویس به روز رسانی در پشت صحنۀ $BrandShortName
 SEND_PING=دربارۀ نصب این برنامه به موزیلا اطلاعات بفرست.
 BROWSE_BUTTON=&مرور…
 DEST_FOLDER=محل مقصد
 
+DOWNLOADING_LABEL=در حال دریافت &brandShortName;
 INSTALLING_LABEL=در حال نصب $BrandShortName…
 UPGRADING_LABEL=در حال ارتقای $BrandShortName…
 
