--- a/fa/browser/chrome/browser/devtools/sourceeditor.properties
+++ b/fa/browser/chrome/browser/devtools/sourceeditor.properties
@@ -93,3 +93,4 @@ autocompletion.commandkey=فاصله
 
 # LOCALIZATION NOTE  (showInformation2.commandkey): This is the key to use to
 # show more information, like type inference.
+showInformation2.commandkey=Shift-Ctrl-Space
