--- a/fa/browser/chrome/browser/devtools/storage.properties
+++ b/fa/browser/chrome/browser/devtools/storage.properties
@@ -14,9 +14,11 @@
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=a
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=فضای ذخیره سازی
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
@@ -33,10 +35,12 @@
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
 # there are no websites on the current page (about:blank)
+tree.emptyText=میزبانی در صفحه وجود ندارد
 
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
+table.emptyText=داده‌ای برای میزبان انتخاب شده موجود نیست
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
@@ -74,6 +78,7 @@ table.headers.indexedDB.keyPath=کلید
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
 # Cookie
+label.expires.session=جلسه
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
