--- a/fa/browser/chrome/browser/migration/migration.properties
+++ b/fa/browser/chrome/browser/migration/migration.properties
@@ -48,5 +48,6 @@ importedSafariReadingList=لیست خواندن (از اپل سفری)
 64_ie=دیگر اطلاعات
 64_safari=دیگر اطلاعات
 64_chrome=اطلاعات دیگر
+64_firefox_other=دیگر داده ها
 
-128_firefox=پنجره‌ها و زبانه‌ها
+128_firefox=پنجره‌ها و سربرگ ها
