[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -611,3 +611,5 @@ customizeTips.tip0.learnMore = Saznajte više
 # %S is brandShortName
 appmenu.restartNeeded.description = Ponovno pokreni %S i primjeni ažuriranja
 appmenu.updateFailed.description = Pozadinsko ažuriranje nije uspjelo, preuzmite ažuriranje
+appmenu.restartBrowserButton.label = Ponovo pokreni %S
+appmenu.downloadUpdateButton.label = Preuzmi dopunu
