--- a/hr/browser/chrome/browser/devtools/webide.properties
+++ b/hr/browser/chrome/browser/devtools/webide.properties
@@ -19,6 +19,7 @@ importPackagedApp_title=Odaberi direktorij
 importHostedApp_title=Otvori hostanu aplikaciju
 importHostedApp_header=Upiši URL manifesta
 
+notification_showTroubleShooting_label=Otklanjanje grešaka
 notification_showTroubleShooting_accesskey=t
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
