--- a/hr/browser/chrome/browser/downloads/downloads.properties
+++ b/hr/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,9 @@ stateDirty=Blokirano: možda sadrži virus ili spyware
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Ova datoteka sadrži virus ili malware.
+blockedPotentiallyUnwanted=Ova datoteka može naštetiti vašem računalu.
+blockedUncommon=Ova datoteka možda nije sigurna za pokretanje.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -54,6 +57,13 @@ stateDirty=Blokirano: možda sadrži virus ili spyware
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Jeste li sigurni da želite odblokirati ovu datoteku?
+unblockTypeMalware=Ova datoteka sadrži virus ili drugu vrstu malwarea koja može naštetiti vašem računalu.
+unblockTypePotentiallyUnwanted=Ova datoteka, maskirana kao korisna, može učiniti nepredviđene promjene vašim programima i postavkama.
+unblockTypeUncommon=Ova datoteka je preuzeta s nepoznate i potencijalno opasne web stranice, te možda nije sigurna za pokretanje.
+unblockTip=Možete potražiti alternativnu stranicu i pokušati preuzeti datoteku kasnije.
+unblockButtonContinue=Svejedno odblokiraj
+unblockButtonCancel=Zaštitite me
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
