--- a/hr/browser/chrome/browser/devtools/timeline.properties
+++ b/hr/browser/chrome/browser/devtools/timeline.properties
@@ -17,10 +17,12 @@ timeline.label=Vremenska crta
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
+timeline.panelLabel=Ploča vremenske crte
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
+timeline.tooltip=Vremenska crta performansi
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
@@ -29,7 +31,11 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=SNIMKE
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Stilovi
+timeline.label.reflow=Protutok
+timeline.label.paint=Boja
+timeline.label.domevent=DOM događaji
