--- a/hr/browser/chrome/browser/loop/loop.properties
+++ b/hr/browser/chrome/browser/loop/loop.properties
@@ -6,11 +6,15 @@
 
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Pridruži se razgovoru
+first_time_experience_button_label=Započnite
 
 share_link_header_text=Podijelite ovu poveznicu da biste pozvali nekoga na razgovor:
+invite_header_text=Pozovite nekoga da vam se pridruži.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -58,10 +62,14 @@ problem_accessing_account=Došlo je do problema prilikom pristupanja vašem rač
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Pokušaj ponovno
 
+share_email_subject4={{clientShortname}} — Pridruži se razgovoru
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body4=Bok!\n\nPridruži mi se u video razgovoru koristeći {{clientShortname}}:\n\nNe trebaš ništa preuzeti ili instalirati, samo otvori ovaj URL u svojem web pregledniku:\n\n{{callUrl}}\n\nAko te zanima, više informacija o {{clientShortname}} možeš pronaći na {{learnMoreUrl}}\n\nČujemo se!
 share_button=E-pošta
+share_button2=Pošalji poveznicu e-poštom
 copy_url_button=Kopiraj
+copy_url_button2=Kopiraj poveznicu
 copied_url_button=Kopirano!
 
 panel_footer_signin_or_signup_link=Prijavite se ili se registrirajte
@@ -89,7 +97,9 @@ new_contact_button=Novi kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Naziv
 new_contact_email_placeholder=E-pošta
+new_contact_phone_placeholder=Firefox OS telefon
 
+contacts_blocked_contacts=Blokirani kontakti
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
@@ -180,6 +190,7 @@ initiate_call_button_label2=Spremni za pokretanje vašeg razgovora?
 incoming_call_title2=Zahtjev razgovora
 incoming_call_accept_button=Prihvati
 incoming_call_accept_audio_only_tooltip=Prihvati sa zvukom
+incoming_call_accept_audio_video_tooltip=Prihvati sa videom
 incoming_call_cancel_button=Otkaži
 incoming_call_cancel_and_block_button=Otkaži i blokiraj
 incoming_call_block_button=Blokiraj
@@ -234,6 +245,7 @@ call_timeout_notification_text=Vaš poziv nije uspio.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Pokušaj ponovno
+email_link_button=Pošalji poveznicu e-poštom
 cancel_button=Odustani
 
 cannot_start_call_session_not_ready=Nije moguće započeti poziv, jer sesija nije spremna.
@@ -251,6 +263,7 @@ legal_text_privacy = Pravila o privatnosti
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
+powered_by_beforeLogo=Pokreće
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Kakav je bio vaš razgovor?
@@ -278,13 +291,28 @@ feedback_rejoin_button=Ponovno se pridruži
 feedback_report_user_button=Prijavi korisnika
 
 help_label=Pomoć
+tour_label=Obilazak
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Razgovor {{conversationLabel}}
 rooms_leave_button_label=Napusti
+rooms_list_copy_url_tooltip=Kopiraj poveznicu
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Trenutni razgovor;Trenutni razgovori
+rooms_list_delete_tooltip=Obriši razgovor
 rooms_list_deleteConfirmation_label=Jeste li sigurni?
+rooms_list_no_current_conversations=Nema trenutnih razgovora
+rooms_name_this_room_label=Dodijeli ime ovom razgovoru
+rooms_new_room_button_label=Započni razgovor
+rooms_only_occupant_label=Prvi ste ovdje.
+rooms_panel_title=Odaberite razgovor ili započnite novi
+rooms_room_full_label=U ovom razgovoru je već dvoje ljudi.
+rooms_room_full_call_to_action_nonFx_label=Preuzmite {{brandShortname}} da biste započeli svoj
+rooms_room_full_call_to_action_label=Saznajte više o {{clientShortname}} »
+rooms_room_joined_label=Netko se pridružio razgovoru!
+rooms_room_join_label=Pridružite se razgovoru
