--- a/sv-SE/browser/chrome/browser/devtools/app-manager.properties
+++ b/sv-SE/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=App Hanteraren kommer att tas bort i en kommande uppdatering. Dina projekt har blivit överförda till WebIDE.
 index.launchWebIDE=Starta WebIDE
 index.readMoreAboutWebIDE=Läs mer
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
