[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -573,13 +573,16 @@ getUserMedia.sharingMenu.accesskey = d
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (ikhamera)
 getUserMedia.sharingMenuMicrophone = %S (isandisi-sandi)
-getUserMedia.sharingMenuApplication = %S (Usetyenziso)
-getUserMedia.sharingMenuScreen = %S (Iskrini)
+getUserMedia.sharingMenuApplication = %S (usetyenziso)
+getUserMedia.sharingMenuScreen = %S (iskrini)
 getUserMedia.sharingMenuWindow = %S (ifestile)
 getUserMedia.sharingMenuCameraMicrophone = %S (ikhamera nesandisi-sandi)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (ikhamera, isandisi-sandi nosetyenziso)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (ikhamera, isandisi-sandi nesikrini)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (ikhamera, isandisi-sandi nefestile)
+getUserMedia.sharingMenuCameraApplication = %S(ikhamera neaplikheyishini)
+getUserMedia.sharingMenuCameraScreen = %S (ikhamera neskrini)
+getUserMedia.sharingMenuCameraWindow = %S (ikhamera nefestile)
 getUserMedia.sharingMenuMicrophoneApplication = %S (isandisi-sandi nosetyenziso)
 getUserMedia.sharingMenuMicrophoneScreen = %S (isandisi-sandi nesikrini)
 getUserMedia.sharingMenuMicrophoneWindow = %S (isandisi-sandi nefestile)
@@ -606,3 +609,5 @@ customizeTips.tip0.learnMore = Funda okungakumbi
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
+appmenu.restartNeeded.description = Qalela %S ukusebenzisa izihlaziyi
+appmenu.updateFailed.description = Uhlaziyo lwendawo engemva aluphumelelanga, nceda ukhuphele uhlaziyo
