--- a/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -102,6 +102,9 @@ quit-button.tooltiptext.mac = Yeka %1$S (%2$S)
 panic-button.label = Ulibele
 panic-button.tooltiptext = Ulibele imbali ethile yokubhrawuza
 
+web-apps-button.label = Ii-Apps
+web-apps-button.tooltiptext = Fumana ii-Apps
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.tooltiptext = Vula i-WebIDE
