--- a/xh/browser/chrome/browser/devtools/debugger.properties
+++ b/xh/browser/chrome/browser/devtools/debugger.properties
@@ -100,6 +100,7 @@ ToolboxDebugger.tooltip=I-Debugger ye-JavaScript
 # each group of sub-level event entries.
 animationEvents=Uhombiso
 audioEvents=Enesandi
+deviceEvents=Isixhobo
 navigationEvents=Ufuniselo
 
 # LOCALIZATION NOTE (blackBoxCheckboxTooltip): The tooltip text to display when
