--- a/xh/browser/chrome/browser/downloads/downloads.properties
+++ b/xh/browser/chrome/browser/downloads/downloads.properties
@@ -45,6 +45,9 @@ stateDirty=Ithintelwe: Isenokuba nevayirasi okanye isipayiwe
 # period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
 # this turns out to be longer than the other existing status strings.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Le fayile iquthele ivirs okanye imalwane.
+blockedPotentiallyUnwanted=Le fayile ingonzakalisa ikhompyutha.
+blockedUncommon=Le fayile isenokungakhuseleki ukuba ingavulwa.
 
 # LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
 #                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
@@ -54,6 +57,12 @@ stateDirty=Ithintelwe: Isenokuba nevayirasi okanye isipayiwe
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Uqinisekile na ukuba ufuna ukuvula le fayle?
+unblockTypeMalware=Le fayile iqulethe ivirus okanye enye i-malwane ezokwenzakalisa ikhompyutha yakho.\u0020
+unblockTypePotentiallyUnwanted=Le fayile, izenza njengesikhupheli esiluncedo, izokwenza iinguqu ezingalindelekanga kwiinkqubo zakho neesetingi.
+unblockTypeUncommon=Le fayile ikhutshelwe kwiwebhusayithi engaqhelekanga nesenokuba kwaye isenokungakhuseleki ukuba ingavulwa
+unblockTip=Ungakhangela esinye isibonelelo sokukhuphela okanye ukukhuphela ifayile kwakhona ngelinye ixesha\u0020
+unblockButtonContinue=Yivule noba kunjalo
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
