--- a/xh/netwerk/necko.properties
+++ b/xh/netwerk/necko.properties
@@ -38,3 +38,4 @@ PhishingAuthAccept=Ndiyaqonda kwaye ndiza kuqaphela kakhulu
 SuperfluousAuth=Umalunga nokuloga ungene kwisayithi "%1$S" ngegama lomsebenzisi "%2$S", kodwa iwebhusayithi ayilufuni ungqinelwano. Lo unokuba ngumzamo wokukukhohlisa.\n\nIs "%1$S" isayithi ofuna ukuyityelela?
 AutomaticAuth=Umalunga nokuloga ungene kwisayithi "%1$S" ngegama lomsebenzisi "%2$S".
 
+TrackingUriBlocked=Isibonelelo ku "%1$S" siye sathintelwa kuba ukhuseleko lolandelel luvunyelwe.
