--- a/xh/toolkit/chrome/global/autocomplete.properties
+++ b/xh/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = Khangela ngo %S
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — Khangela nge %1$S\u0020
 switchToTab = Tshintshela kwithebhu
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = Tyelela %S
