--- a/xh/toolkit/chrome/global/console.properties
+++ b/xh/toolkit/chrome/global/console.properties
@@ -8,7 +8,9 @@ errFile=Ifayili Eyintsusa: %S
 errLine=Umgca: %S
 errLineCol=Umgca: %S, Umqolo owehlayo: %S
 errCode=Ikhowudi Eyintsusa:
+errTime=I-Timestamp: %S
 
 # LOCALIZATION NOTE (evaluationContextChanged): The message displayed when the
 # browser console's evaluation context (window against which input is evaluated)
 # changes.
+evaluationContextChanged=Itsintshile intuthuzelo yovavanyo lwemeko, mhlawumbi kuba iwindow yento okujoliswe kuyo ibivaliwe okanye ngenxa yokuba ubuvule iwindow enkulu kwiwindow yokuthuthuzela ibhrawuza.\u0020
