[es-MX] update from Pootle (mobile)

--- a/es-MX/mobile/android/chrome/browser.properties
+++ b/es-MX/mobile/android/chrome/browser.properties
@@ -323,7 +323,9 @@ remoteNotificationGenericName=Aplicación
 # the remote debugger server is listening.
 remoteNotificationMessage=Escuchando en el puerto %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Activar depurador para %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Toca para activar el depurador remoto
 
 # Helper apps
 helperapps.open=Abrir
