--- a/es-MX/mobile/android/chrome/webapp.properties
+++ b/es-MX/mobile/android/chrome/webapp.properties
@@ -56,3 +56,4 @@ retrievalFailedTitle=#1 actualización fallida;#1 actualizaciones fallidas
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Falló al recuperar la actualización para %1$S;Falló para recuperar las actualizaciones para %1$S
 
+webappsDisabled=Instalación de aplicaciones está deshabilitado
