--- a/ro/mobile/android/chrome/browser.properties
+++ b/ro/mobile/android/chrome/browser.properties
@@ -283,6 +283,8 @@ remoteIncomingPromptCancel=Renunțare
 remoteNotificationGenericName=Aplicație
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Deschide
