--- a/sq/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sq/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,12 @@ selfxss.msg=Sinjalizim Karremëzimi: Bëni kujdes kur ngjitni gjëra që nuk i k
 # Please avoid using non-keyboard characters here
 selfxss.okstring=lejoje ngjitjen
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Dështoi shndërrimi i kartelës nga %1$S në Unikod.
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Rreshti %1$S, Shtylla %2$S
+
