--- a/sq/browser/chrome/browser/devtools/storage.properties
+++ b/sq/browser/chrome/browser/devtools/storage.properties
@@ -67,15 +67,15 @@ table.headers.cookies.creationTime=Krijuar më
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
-#table.headers.cookies.isHttpOnly=isHttpOnly
+table.headers.cookies.isHttpOnly=ështëVetëmHttp
 # LOCALIZATION NOTE (table.headers.cookies.isSecure):
 # This string is used in the header for the column which denotes whether a
 # cookie can be accessed via a secure channel only or not.
-#table.headers.cookies.isSecure=isSecure
+table.headers.cookies.isSecure=ështëEsigurt
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
-#table.headers.cookies.isDomain=isDomain
+table.headers.cookies.isDomain=ështëPërkatësi
 
 table.headers.localStorage.name=Kyç
 table.headers.localStorage.value=Vlerë
