--- a/sq/browser/chrome/browser/devtools/webide.properties
+++ b/sq/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,12 @@ importPackagedApp_title=Përzgjidhni Drejtori
 importHostedApp_title=Hapni Zbatim të Strehuar
 importHostedApp_header=Jepni URL Manifesti
 
-notification_showTroubleShooting_label=diagnostikim
-notification_showTroubleShooting_accesskey=d
+notification_showTroubleShooting_label=Diagnostikim
+notification_showTroubleShooting_accesskey=D
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Po ngarkohet…
 
 # These messages appear in a notification box when an error occur.
 
