--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -572,7 +572,7 @@ getUserMedia.continueSharing.accesskey = V
 getUserMedia.stopSharing.label = Ndale Ndarjen Me të Tjerët
 getUserMedia.stopSharing.accesskey = N
 
-# getUserMedia.sharingMenu.label = Skeda që ndajnë pajisje
+getUserMedia.sharingMenu.label = Skeda që ndajnë pajisje
 getUserMedia.sharingMenu.accesskey = P
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
