--- a/sq/browser/chrome/browser/downloads/downloads.properties
+++ b/sq/browser/chrome/browser/downloads/downloads.properties
@@ -36,7 +36,7 @@ stateBlockedParentalControls=U bllokua nga Kontrolli Prindëror
 stateBlockedPolicy=U bllokua nga rregullat e sigurisë së zonës suaj
 # LOCALIZATION NOTE (stateDirty):
 # Indicates that the download was blocked after scanning.
-stateDirty=U bllokua: Mundet përmban virus ose spyware
+stateDirty=U bllokua: Ka gjasa se përmban virus ose spyware
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
