--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -555,13 +555,18 @@ getUserMedia.stopSharing.accesskey = s
 
 getUserMedia.sharingMenu.label = Apparaten die tabbladen delen
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -575,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (camera en microfoon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, microfoon en toepassing)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microfoon en scherm)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microfoon en venster)
+getUserMedia.sharingMenuCameraApplication = %S (camera en toepassing)
+getUserMedia.sharingMenuCameraScreen = %S (camera en scherm)
+getUserMedia.sharingMenuCameraWindow = %S (camera en venster)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microfoon en toepassing)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microfoon en scherm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microfoon en venster)
