--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -604,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = D
 customizeTips.tip0 = %1$S: u kunt %2$S zo aanpassen dat het net zo werkt als u. Sleep eenvoudig een bovenstaand item naar het menu of de werkbalk. %3$S over het aanpassen van %2$S.
 customizeTips.tip0.hint = Hint
 customizeTips.tip0.learnMore = Meer info
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = %S herstarten om de updates toe te passen
+appmenu.updateFailed.description = Update op de achtergrond mislukt, download de update
+appmenu.restartBrowserButton.label = %S herstarten
+appmenu.downloadUpdateButton.label = Update downloaden
